Version 3.0.0b3 - xx xxx 2009

  * Refresh third party support libraries. Ticket #29.
  * Update NullResultSet for JDBC 4.0. Ticket #34.
  * Admin tool fails to delete Lookups. Ticket #37.

Version 3.0.0b2 - 13 Apr 2009

  * Make Variman more tolerant of out of spec 1.5 metadata.
  * Add Metadata Migration tool. Ticket #33.

Version 3.0.0b1 - 06 Apr 2009

  * Merged rets-client into Variman base.
  * Add ability to listen on specific IP address. Ticket #15.
  * Metadata Loader warns on DBName for METADATA-CLASS. Ticket #16.
  * Metadata Loader warns on StandardName for METADATA-OBJECT. Ticket #17.
  * Support X- extensions to metadata. Ticket #23.
  * RETS 1.7.2 enhancements. Ticket #24.
  * Added Metadata Editor to Admin tool. This is still experimental. Ticket #31.
  
Version 2.1.11 - 20 June 2007

  * On queries with Count=2 return total count, ignoring offset and limit.
  * <MAXROWS/> now returned at the end of COMPACT and COMPACT-DECODED format
    if the row limit was exceeded
  * Windows binary service version will now use my memory.  It was limited
    to default of 512MB of heap, this has been increased to 1.5GB
  * When running standalone, can now bind to specific IPs
  * Developers can override default behaviour in some instances by
    swapping interfaces using Swing.

Version 2.1.10 - 05 July 2006

  * Query count limit added to group preferences.
  * Added "Cache-Control: private" header to all transactions.

Version 2.1.9 - 21 March 2006

  * Spaces are now allowed in wildcard searchs by URL encoding them.
  * Fix a bug in the DMQL parser when using wildcards, numbers, and letters.
  * Fields with a lookup interpration but no valid lookup are logged.
  * The Windows setup program removes old code before installation to avoid
    out of date files when upgrading.
  * Unit tests now run and complete on Windows.

Version 2.1.8 - 25 January 2006

  * The 'Default' attribute in Table metadata is ignored.